feature: login page completed - red theme

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 
 body{
   font-family: 'Poppins', sans-serif;
+  max-width: 100%;
 }
 
 h1 {
@@ -21,10 +22,10 @@ h2 {
 }
 
 :root{
-  --color-primary: #111158;
-  --color-primary-dark: #1f1f70;
-  --color-primary-light: #cce4ff;
-  --color-primary-light-2: #e6f2ff;
+  --color-primary: #b50101;
+  --color-primary-dark: #9e0000;
+  --color-primary-light: #ffeeee;
+  --color-primary-light-2: #ffffff;
 
 
   /* --color-primary: #d11b21;
@@ -32,16 +33,18 @@ h2 {
   --color-primary-light: #fbcbcb;
   --color-primary-light-2: #fff3f3; */
 
-  --color-primary: #1092de;
+  /* --color-primary: #1092de;
   --color-primary-dark: #009ffa;
   --color-primary-light: #d2efff;
-  --color-primary-light-2: #eef9ff; 
+  --color-primary-light-2: #eef9ff;  */
 
   /* --color-primary: #7380ec; */
   --color-danger:#ff7782;
   --color-success: #41f1b6;
   --color-warning: #ffbb55;
   --color-white: #fff;
+  --white: #fff;
+  --black: #000;
   --color-info-dark: #7d8da1;
   --color-info-light: #dce1eb;
   --color-dark: #363949;
