--- a/src/CustomElements/Buttons/Buttons.css
+++ b/src/CustomElements/Buttons/Buttons.css
@@ -1,17 +1,18 @@
 .login-btn {
-    background-color: var(--color-primary);
+    background-color: var(--color-primary-light);
     border: none;
     outline: none;
-    padding: 1rem 1rem;
-    border-radius: 0.25rem;
-    color: var(--white);
-    min-width: 23rem;
+    padding: 0.5rem 4rem;
+    border-radius: 1rem;
+    color: var(--color-primary);
+    font-size: 1.25rem;
     cursor: pointer;
     transition: all 200ms ease;
 }
 
 .login-btn:hover {
     background-color: var(--color-primary-dark);
+    color: var(--white);
     transform: scale(1.06);
     box-shadow: var(--box-shadow);
 }
