--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,500;1,600;1,700;1,800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,500;1,600;1,700;1,800&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +8,7 @@
 }
 
 body{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Inter', sans-serif;
   max-width: 100%;
 }
 
@@ -43,6 +42,7 @@ h2 {
   --color-success: #41f1b6;
   --color-warning: #ffbb55;
   --color-white: #fff;
+  --color-main-bg: #f8f8f8;
   --white: #fff;
   --black: #000;
   --color-info-dark: #7d8da1;
