--- a/src/Components/CollapsableSideNav/CollapsableSideNav.css
+++ b/src/Components/CollapsableSideNav/CollapsableSideNav.css
@@ -1,6 +1,6 @@
 aside{
-    width: max-content;
-    box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.05);
+    width: 18rem;
+    /* box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.05); */
     height: 100vh;
     position: fixed;
     left: 0;
