--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -14,10 +14,10 @@
 
 .img-logo {
     display: block;
-    position: fixed;
-    left: 0rem;
-    top: 0rem;
-    max-width: 10rem;
+    /* position: fixed; */
+    /* left: 0rem;
+    top: 0rem; */
+    max-width: 15rem;
 }
 
 .login-grid-section {
@@ -27,12 +27,14 @@
 
 .login-left-container {
     display: flex;
+    flex-direction: column;
+    gap: 1rem;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 .login-left-container img{
-    width: 560px;
+    width: 30rem;
 }
 
 .login-right-container {
