--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,14 @@
   padding: 0;
   text-decoration: none;
   font-size: 14px;
+  box-sizing: border-box;
   
 }
 
 body{
   font-family: 'Inter', sans-serif;
-  max-width: 100%;
+  max-width: 100vw;
+
 }
 
 h1 {
