--- a/src/Components/CollapsableSideNav/CollapsableSideNav.css
+++ b/src/Components/CollapsableSideNav/CollapsableSideNav.css
@@ -14,9 +14,10 @@ aside header{
 }
 
 .menu{
+    margin-top: 2rem;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5rem;
     margin-left: 1.5rem;
 }
 .menu li{
