--- a/src/Components/CollapsableSideNav/CollapsableSideNav.css
+++ b/src/Components/CollapsableSideNav/CollapsableSideNav.css
@@ -20,24 +20,31 @@ aside header{
     gap: 1.5rem;
     margin-left: 1.5rem;
 }
-.menu li{
+.menu a{
+    text-decoration: none;
     display: flex;
     align-items: center;
     gap: 0.75rem;
+    color: var(--black);
     transition: all 100ms ease;
 }
 
-.menu li:hover{
+.menu  a:hover{
     scale: 1.018;
 }
 
-.menu li:last-child{
+.menu  a:last-child{
     position: absolute;
     bottom: 2rem;
 }
 
-.menu li active{
-    display: flex;
+.menu  a:last-child > img{
+    width: 17.5px;
+}
+.activated span{
+    /* display: flex;
     align-items: center;
-    gap: 0.75rem;
+    gap: 0.75rem; */
+
+    color: blue;
 }
