--- a/src/Components/AddCandidate/AddCandidate.css
+++ b/src/Components/AddCandidate/AddCandidate.css
@@ -16,7 +16,7 @@
     width: 100%;
     gap: 1rem;
     box-sizing: border-box;
-    background-color: var(--white);
+    background-color: var(--color-card-bg);
 }
 
 h3{
