--- a/src/Components/CollapsableSideNav/CollapsableSideNav.css
+++ b/src/Components/CollapsableSideNav/CollapsableSideNav.css
@@ -5,6 +5,8 @@ aside{
     position: fixed;
     left: 0;
     top: 0;
+    /* box-shadow: 2px 0 0.25rem #00000020; */
+    border-right: 3px solid #ebedf1;
 }
 
 aside header{
