approve ts done, has some bugs

--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,8 @@ h2 {
   --blue-2: #4585f3;
   --blue-3: #dde9ff;
 
+  --box-shadow-1: 2px 2px 0.25rem #00000008,
+
 
   /* --color-primary: #d11b21;
   --color-primary-dark: #1f1f70;
