--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,7 @@ h2 {
   --blue-3: #dde9ff;
 
   --box-shadow-1: 2px 2px 0.25rem #00000008,
+  --box-shadow-2: 2px 2px 1rem #00000010,
 
 
   /* --color-primary: #d11b21;
