--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,500;1,600;1,700;1,800&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
   font-size: 14px;
-  box-sizing: border-box;  
+  box-sizing: border-box;
 }
 
-body{
+
+body {
   font-family: 'Inter', sans-serif;
   max-width: 100vw;
 
@@ -24,7 +26,7 @@ h2 {
 
 
 /*  BLUE */
-:root{
+:root {
   --color-primary: #1a6efc;
   --color-primary-dark: #185acc;
   --color-primary-light: #ffeeee;
@@ -46,7 +48,7 @@ h2 {
   --color-primary-light-2: #eef9ff;  */
 
   /* --color-primary: #7380ec; */
-  --color-danger:#ff7782;
+  --color-danger: #ff7782;
   --color-success: #41f1b6;
   --color-warning: #ffbb55;
   --color-white: #fff;
@@ -63,9 +65,9 @@ h2 {
   --color-background: #f6f6f9;
   --white: #ffffff;
   --card-border-radius: 2rem;
-  --color-text:  #363949;
+  --color-text: #363949;
 
-  --bg-gradient-1: linear-gradient(to top,var(--color-primary-light), var(--white));
+  --bg-gradient-1: linear-gradient(to top, var(--color-primary-light), var(--white));
 
   --border-radius-1: 0.4rem;
   --border-radius-2: 0.8rem;
@@ -79,7 +81,7 @@ h2 {
 }
 
 /* red */
-:root{
+:root {
   --color-primary: #b50101;
   --color-primary-dark: #9e0000;
   --color-primary-light: #ffeeee;
@@ -106,11 +108,11 @@ h2 {
   --color-primary-light-2: #eef9ff;  */
 
   /* --color-primary: #7380ec; */
-  --color-success-bg:#defff5;
+  --color-success-bg: #defff5;
   --color-success: #41f1b6;
   --color-warning: #ffbb55;
   --color-warning-bg: #fff4e2;
-  --color-danger:#ff7782;
+  --color-danger: #ff7782;
   --color-white: #fff;
   --color-main-bg: #f8f8f8;
   /* --color-main-bg: #ffffff; */
@@ -126,9 +128,9 @@ h2 {
   --color-background: #f6f6f9;
   --white: #ffffff;
   --card-border-radius: 2rem;
-  --color-text:  #363949;
+  --color-text: #363949;
 
-  --bg-gradient-1: linear-gradient(to top,var(--color-primary-light), var(--white));
+  --bg-gradient-1: linear-gradient(to top, var(--color-primary-light), var(--white));
 
   --border-radius-1: 0.4rem;
   --border-radius-2: 0.8rem;
@@ -139,7 +141,7 @@ h2 {
 
   --box-shadow: 0 2rem 3rem var(--color-light);
 
-} 
+}
 
 
 /* Styling Google Material Symbols */
@@ -148,6 +150,9 @@ span.size-1 {
   color: var(--grey);
 }
 
-.material-symbols-outlined{
+.material-symbols-outlined {
   font-size: 1.25rem;
+}
+a {
+  color: var(--black);
 }
