add candidate error resolved

--- a/src/App.css
+++ b/src/App.css
@@ -116,7 +116,7 @@ h2 {
   --color-white: #fff;
   --color-main-bg: #f9f9f9;
   /* --color-main-bg: #ffffff; */
-  --color-card-bg: #111314;
+  --color-card-bg: #ffffff;
   --white: #fff;
   --black: #000;
   --color-info-dark: #7d8da1;
